# vidtranslate

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
llama-t5/: Cargo.toml
llama-t5/src/: lib.rs
src/: App.tsx  data.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  db.sqlite  db.sqlite-shm  db.sqlite-wal  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: commands.rs  db.rs  func.rs  main.rs  translate.rs  video.rs
src/components/: AudioLines.tsx  LangChose.tsx  LangDetect.tsx  ModelManager.tsx  ModelSelector.tsx  ProgressBar.tsx  Setting.tsx  Slider.tsx  Spinner.tsx  TextCards.tsx  Transcript.tsx  Translate.tsx  Video.tsx  VideoItems.tsx  VideoText.tsx  WebmVideo.tsx
src/hooks/: useMediaMetadata.ts
src/store/: DataContext.tsx  SettingContext.tsx
src/utils/: file.ts  transript.ts
