[package]
name = "llama-t5"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candle-core = {version="0.6.0", features=["metal"]}
candle-transformers = {version="0.6.0", features=["metal"]}
serde = "1.0.204"
serde_json = "1.0.120"
tokenizers = "0.19.1"


[[bin]]
name = "llama-t5-example"
path = "src/bin/main.rs"

[features]
default = []
cuda = []
