[package]
name = "llama-rust-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["bruceunx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-write-file", "protocol-asset", "fs-read-file", "os-all", "dialog-save", "dialog-open", "dialog-message", "window-minimize", "window-maximize", "window-hide", "window-start-dragging", "window-close", "window-show", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
